--- a/app/src/main/res/layout/spinner_tipo_processos.xml
+++ b/app/src/main/res/layout/spinner_tipo_processos.xml
@@ -13,7 +13,9 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/layoult_border"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="3dp"
@@ -39,14 +41,13 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="5dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/tv_nameGrupo"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:layout_margin="5dp"
                         android:text="Grupo:"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -56,7 +57,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:layout_margin="5dp"
                         android:background="@drawable/bg_spinner_grupo"
                         android:minHeight="48dp"
                         android:spinnerMode="dialog">
@@ -67,14 +67,12 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/tv_nameDivisao"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_margin="5dp"
                         android:text="Divisão:"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -82,9 +80,8 @@
                     <Spinner
                         android:id="@+id/spinner_divisao"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="70dp"
                         android:layout_gravity="center"
-                        android:layout_margin="5dp"
                         android:background="@drawable/bg_spinner_grupo"
                         android:spinnerMode="dialog">
 
@@ -96,10 +93,12 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/layoult_border"
             app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="3dp"
+            app:cardCornerRadius="5dp"
             app:cardElevation="3dp"
             app:cardUseCompatPadding="true"
             app:contentPadding="5dp">
@@ -142,19 +141,12 @@
 
         </androidx.cardview.widget.CardView>
 
-        <Button
-            android:id="@+id/btn_buscar"
-            android:layout_width="100dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:text="Buscar"
-            android:textColor="#423E3E"
-            app:backgroundTint="#26C6DA" />
-
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/layoult_border"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="3dp"
